fix wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -324,6 +324,7 @@ nav {
   display: -ms-flexbox;  /* TWEENER - IE 10 */
   display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
   display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
+  flex-wrap: wrap;
 }
 
 .about {
@@ -360,7 +361,7 @@ nav {
 .projects h2 {
   color: #F7F5F6;
   text-align: center;
-  width: inherit;
+  width: auto;
 }
 
 .about p {
